--- a/src/index.css
+++ b/src/index.css
@@ -37,4 +37,6 @@
   --text-imgfont-h1:32px;
   --text-footer-p1:15.3px;
   --text-footer-p2:12.4px;
+  --text-link-p3:11.9px;
+  --text-shop-p1:28px;
 }
